# api-ads

api_ads/: .gitignore  Makefile  manage.py  pyproject.toml  setup.cfg
api_ads/api/: models.py  serializers.py  urls.py  views.py
api_ads/api/migrations/: 0001_initial.py
api_ads/api_ads/: asgi.py  settings.py  urls.py  wsgi.py
